fixed alignment issue

--- a/src/Components/Search/GuestModal.css
+++ b/src/Components/Search/GuestModal.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 45vh;
+  height: 55vh;
   width: 450px;
   background-color: rgba(255, 255, 255, 0.5);
   padding: 20px;
