--- a/src/Components/Search/Search.css
+++ b/src/Components/Search/Search.css
@@ -4,7 +4,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 50vh;
+  height: 60vh;
   width: 500px;
   top: 190px;
   background-color: rgba(255, 255, 255, 0.5);
